syntax = "proto3";
package protobufs;

import "google/protobuf/empty.proto";
import "land_array.proto";
import "rovers.proto";
import "mines.proto";
import "rover_mine_pin.proto";
import "status.proto";

service ground_control {
  rpc get_map(google.protobuf.Empty) returns (land_array);

  rpc get_movements(rover_number) returns (rover_commands);

  rpc get_mine_serial_number(rover_number) returns (mine_serial_number);

  rpc rover_status(status) returns (google.protobuf.Empty);

  rpc share_mine_pin(rover_mine_serial_pin) returns (status);
}